test/mutation_analysis/s0035_search_insert_position/hafis/o3/mutants/6/result.txt
./test/mutation_analysis/s0035_search_insert_position/hafis/o3/mutants/6/Solution.java:36: error: unreachable statement
        return lo;
        ^
1 error
